--- a/src/vue/VueTerraria.fxml
+++ b/src/vue/VueTerraria.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="BorderMap" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.TerrariaControleur">
+<BorderPane fx:id="panePerso" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.TerrariaControleur">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" />
    </children>
    <center>
-      <Pane fx:id="panePerso" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <Pane fx:id="borderMap" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
