--- a/src/vue/VueTerraria.fxml
+++ b/src/vue/VueTerraria.fxml
@@ -5,11 +5,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="panePerso" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.TerrariaControleur">
+<BorderPane fx:id="borderPanePerso" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.TerrariaControleur">
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" />
    </children>
    <center>
-      <Pane fx:id="borderMap" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <Pane fx:id="paneCentral" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane fx:id="paneMap" prefHeight="200.0" prefWidth="200.0" />
+            <Pane prefHeight="200.0" prefWidth="200.0" />
+         </children>
+      </Pane>
    </center>
 </BorderPane>
