--- a/src/vue/VueTerraria.fxml
+++ b/src/vue/VueTerraria.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<Pane fx:id="panePrincipal" maxHeight="1080" maxWidth="1920" minHeight="00" minWidth="0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.TerrariaControleur">
+<Pane fx:id="panePrincipal" maxHeight="1080" maxWidth="1920" minHeight="00" minWidth="0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.ControleurTerraria">
    <children>
       <Pane fx:id="panePerso" layoutX="0" prefHeight="400.0" prefWidth="110.0" />
       <Pane fx:id="paneMap" layoutX="0" prefHeight="400.0" prefWidth="600.0" />
